TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "137163135864016" [label="Start"];
  "137163135864016" -> "137163135862192";
  "137163135862192" [label="Code"];
  "137163135862192" -> "137163135864736";
  "137163135864736" [label="Function"];
  "137163135864736" -> "137163135863824";
  "137163135864736" -> "137163135867712";
  "137163135864736" -> "137163135863344";
  "137163135863824" [label="main"];
  "137163135867712" [label="Parameters"];
  "137163135863344" [label="Code"];
  "137163135863344" -> "137163135862864";
  "137163135863344" -> "137163135864640";
  "137163135862864" [label="Code"];
  "137163135862864" -> "137163135863920";
  "137163135863920" [label="Declaration"];
  "137163135863920" -> "137163135863104";
  "137163135863920" -> "137163135866368";
  "137163135863104" [label="x"];
  "137163135866368" [label="1"];
  "137163135864640" [label="Code"];
  "137163135864640" -> "137163135863056";
  "137163135863056" [label="Declaration"];
  "137163135863056" -> "137163135866080";
  "137163135863056" -> "137163135862288";
  "137163135866080" [label="x"];
  "137163135862288" [label="2"];
}
